[package]
name = "phone_number"
edition = "2021"

description="With a given country and phone number, validate and format the MOBILE phone number to E.164 standard"
license="MIT"
version = "0.1.2"
authors = ["Hiroaki Kamei <kmtr@outlook.com>"]
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
regex = "1.11.0"
